configs/k3l/learn-jenkins-app/deployment-staging.yaml
# learn-jenkins-app — Deployment (namespace: staging, mirror of default)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-jenkins-app
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learn-jenkins-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: learn-jenkins-app
    spec:
      containers:
      - name: app
        image: ghcr.io/example-user/learn-jenkins-app:79
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      restartPolicy: Always
