configs/k3l/learn-jenkins-app/service-default.yaml
# learn-jenkins-app — Service (namespace: default, NodePort)
apiVersion: v1
kind: Service
metadata:
  name: learn-jenkins-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: learn-jenkins-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
